--- a/public/views/spells_manager.html
+++ b/public/views/spells_manager.html
@@ -285,6 +285,7 @@
                 mana_support: $scope.mana_support,
                 mana_sup_time: $scope.mana_sup_time,
                 cost: $scope.cost,
+                instant: $scope.instant,
                 effect: $scope.effect,
                 description: $scope.description
             }).success(function (data) {
