заклинания на странице редактирования

--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -746,7 +746,7 @@
                                             </div>
                                         </a>
                                     </h4>
-                                    <div id="spells{{school.id}}" class="panel-collapse collapse in">
+                                    <div id="spells{{school.id}}" class="panel-collapse collapse">
                                         <div class="panel-body">
                                             <table class="table table-striped">
                                                 <tr ng-repeat="spell in school.Spells | orderBy : 'name'">
