--- a/public/views/edit_personage.html
+++ b/public/views/edit_personage.html
@@ -79,7 +79,7 @@
                     </a>
                 </h4>
 
-                <div id="attributes" class="panel-collapse collapse in">
+                <div id="attributes" class="panel-collapse collapse">
                     <div class="panel-body">
                         <table class="table table-striped">
                             <tr ng-repeat="personageAttribute in personageAttributes | orderBy : 'Attribute.name'">
@@ -712,19 +712,229 @@
 
             <div class="panel panel-default">
                 <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#spells">
+                        <div class="panel-heading">
+                            Заклинания
+                        </div>
+                    </a>
+                </h4>
+                <div id="spells" class="panel-collapse collapse in">
+                    <div class="panel-body">
+
+                        <div ng-repeat="school in schools | orderBy : 'name'">
+                            <div class="panel-group">
+
+                                <div class="panel panel-default">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" href="#spells{{school.id}}">
+                                            <div class="panel-heading">
+                                                {{school.name}}
+                                            </div>
+                                        </a>
+                                    </h4>
+                                    <div id="spells{{school.id}}" class="panel-collapse collapse in">
+                                        <div class="panel-body">
+                                            <table class="table table-striped">
+                                                <tr ng-repeat="spell in school.Spells | orderBy : 'name'">
+                                                    <td style="vertical-align:middle;">
+                                                        <a href="#" class="btn btn-link" role="button" ng-click="showSpellDetail(spell.id)">
+                                                            {{ spell.name }}
+                                                        </a>
+                                                    </td>
+                                                    <td style="vertical-align:middle;text-align:center;">
+                                                        {{spell.cost}} оп.
+                                                    </td>
+                                                    <td ng-show="!isSpellAdded(spell.id)">
+                                                    </td>
+                                                    <td ng-show="isSpellAdded(spell.id)">
+                                                        <div ng-repeat="personageSpell in personageSpells" style="margin-top: 7px">
+                                                            <div ng-show="personageSpell.Spell.id == spell.id">
+                                                                {{personageSpell.level}} ур.
+                                                            </div>
+                                                        </div>
+                                                    </td>
+                                                    <td ng-show="isSpellAddedAndLevel0(spell.id)">
+                                                        <button type="button" class="btn btn-link" ng-click="deletePersonageSpell(spell.id)">x</button>
+                                                    </td>
+                                                    <td ng-hide="isSpellAdded(spell.id)">
+                                                        <button type="button" class="btn btn-link" ng-click="addPersonageSpell(spell.id)">Добавить
+                                                        </button>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="panel panel-default">
+                <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#inventory">
                         <div class="panel-heading">
-                            Инвентарь
+                            Заметки
                         </div>
                     </a>
                 </h4>
                 <div id="inventory" class="panel-collapse collapse">
                     <div class="panel-body">
-                        Инвентарь
+                        <textarea id="notes" ng-model="notes" style="width: 100%; height: 100%;"></textarea>
                     </div>
                 </div>
             </div>
 
+        </div>
+    </div>
+
+    <div id="spellDetails" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Описание заклинания: <strong>{{spellDetails.spell.name}}</strong></h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row" ng-show="spellDetails.personageSpell == null">
+                        <div class="col-md-12 col-xs-12">
+                            <strong class="text-danger">У вас нет этого заклинания!</strong>
+                        </div>
+                    </div>
+                    <div class="row" ng-show="spellDetails.personageSpell != null">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Ваш уровень:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            {{spellDetails.personageSpell.level}}
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            <button type="button" class="btn btn-default"
+                                    ng-click="increaseSpellLevel(spellDetails.personageSpell)">
+                                <span class="glyphicon glyphicon-triangle-top"/>
+                            </button>
+                            <button type="button" class="btn btn-default"
+                                    ng-click="decreaseSpellLevel(spellDetails.personageSpell)">
+                                <span class="glyphicon glyphicon-triangle-bottom"/>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row" ng-show="spellDetails.personageSpell != null">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Учитель:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            <input type="checkbox" class="form-control" id="spellTutored"
+                                   ng-model="spellDetails.personageSpell.tutored" style="margin-top: -6px; margin-left: -6px;">
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Кодовое название:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            {{spellDetails.spell.name}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Сложность:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            {{spellDetails.spell.complexity}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Сложность создания:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            {{spellDetails.spell.creating_complexity}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Мана:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            {{spellDetails.spell.mana}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Поддержание:</strong>
+                        </div>
+                        <div ng-show="spellDetails.spell.instant">
+                            <div class="col-md-4 col-xs-4">
+                                Мгновенное
+                            </div>
+                        </div>
+                        <div ng-hide="spellDetails.spell.instant">
+                            <div class="col-md-4 col-xs-4">
+                                {{spellDetails.spell.mana_support}} {{spellDetails.spell.mana_sup_time}}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Стоимость:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            {{spellDetails.spell.cost}}
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Эффект:</strong>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 col-xs-12">
+                            {{spellDetails.spell.effect}}
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Описание:</strong>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 col-xs-12">
+                            {{spellDetails.spell.description}}
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Понятно!</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="attachedSkillHasSpellsAlert" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Внимание!!!</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Нельзя удалить школу магии, пока в ней есть заклинания!!!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Понятно!</button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -799,13 +1009,15 @@
         var personage = $q.defer();
         var raceAttributes = $q.defer();
         var personageMerits = $q.defer();
+        var personageAttachedSkills = $q.defer();
 
         function success(data) {
+            $scope.recalculateMagicSchools();
             $scope.loader = false;
         }
 
         var all = $q.all([merits.promise, inherents.promise, flaws.promise, attachedSkills.promise,
-            triggerSkills.promise, personage.promise, raceAttributes.promise, personageMerits.promise]);
+            triggerSkills.promise, personage.promise, raceAttributes.promise, personageMerits.promise, personageAttachedSkills.promise]);
 
         all.then(success);
 
@@ -859,16 +1071,125 @@
             $scope.personageAttributes = data.personage.PersonageAttributes;
             $scope.personageInherents = data.personage.PersonageInherents;
             $scope.personageFlaws = data.personage.PersonageFlaws;
-            $scope.personageAttachedSkills = data.personage.PersonageAttachedSkills;
             $scope.personageTriggerSkills = data.personage.PersonageTriggerSkills;
+            $scope.personageSpells = data.personage.PersonageSpells;
+            $scope.notes = data.personage.notes;
             personage.resolve();
         });
+
+        $scope.recalculateMagicSchools = function () {
+            $scope.schools = [];
+            angular.forEach($scope.personageAttachedSkills, function (personageAttachedSkill) {
+                if (personageAttachedSkill.AttachedSkill.spells_connected) {
+                    $scope.schools.push(personageAttachedSkill.AttachedSkill);
+                }
+            });
+        };
 
         $http.get('/personageMeritsByPersonageId/' + personageId).
         success(function (data) {
             $scope.personageMerits = data.personageMerits;
             personageMerits.resolve();
         });
+
+        $http.get('/personageAttachedSkillsByPersonageId/' + personageId).
+        success(function (data) {
+            $scope.personageAttachedSkills = data.personageAttachedSkills;
+            personageAttachedSkills.resolve();
+        });
+
+        $scope.showSpellDetail = function (spell_id) {
+            $scope.loader = true;
+            $scope.spellDetails = {
+                spell: null,
+                personageSpell: null
+            };
+            $http.get('/spells/' + spell_id).
+            success(function (result) {
+                $scope.spellDetails.spell = result.spell;
+                angular.forEach($scope.personageSpells, function (personageSpell) {
+                    if (personageSpell.Spell.id == spell_id) {
+                        $scope.spellDetails.personageSpell = personageSpell;
+                    }
+                });
+                $scope.loader = false;
+                jQuery('#spellDetails').modal('show');
+            });
+        };
+
+        $scope.isSpellAdded = function (id) {
+            var spellAdded = false;
+            angular.forEach($scope.personageSpells, function (personageSpell) {
+                if (personageSpell.Spell.id == id) {
+                    spellAdded = true;
+                }
+            });
+            return spellAdded;
+        };
+
+        $scope.isSpellAddedAndLevel0 = function (id) {
+            var isSpellAddedAndLevel0 = false;
+            angular.forEach($scope.personageSpells, function (personageSpell) {
+                if (personageSpell.Spell.id == id && personageSpell.level == 0) {
+                    isSpellAddedAndLevel0 = true;
+                }
+            });
+            return isSpellAddedAndLevel0;
+        };
+
+        $scope.addPersonageSpell = function (id) {
+            $scope.loader = true;
+            $http.get('/spells/' + id).
+            success(function (result) {
+                $scope.personageSpells.push({
+                    Spell: result.spell,
+                    SpellId: id,
+                    PersonageId: personageId,
+                    level: 0,
+                    tutored: false
+                });
+                $scope.personage.experience = $scope.personage.experience - result.spell.cost;
+                $scope.loader = false;
+            });
+        };
+
+        $scope.deletePersonageSpell = function (id) {
+            angular.forEach($scope.personageSpells, function (personageSpell) {
+                if (personageSpell.Spell.id == id) {
+                    var index = $scope.personageSpells.indexOf(personageSpell);
+                    $scope.personageSpells.splice(index, 1);
+                    $scope.personage.experience = $scope.personage.experience + personageSpell.Spell.cost;
+                }
+            });
+        };
+
+        $scope.increaseSpellLevel = function (personageSpell) {
+            var cost;
+            if (personageSpell.level < 5) {
+                if (personageSpell.tutored) {
+                    cost = personageSpell.Spell.cost;
+                    personageSpell.tutored = false;
+                } else {
+                    cost = personageSpell.Spell.cost * 2;
+                }
+
+                personageSpell.level++;
+                $scope.personage.experience = $scope.personage.experience - cost;
+                $http.post('/history', {
+                    key: 'SPELL_LEVEL' + personageSpell.level.toString() + 'UP',
+                    value: cost.toString()
+                });
+            }
+        };
+
+        $scope.decreaseSpellLevel = function (personageSpell) {
+            if (personageSpell.level > 0) {
+                $http.get('/byKey/' + 'SPELL_LEVEL' + personageSpell.level.toString() + 'UP').success(function (result) {
+                    $scope.personage.experience = $scope.personage.experience + parseInt(result.result.value);
+                    personageSpell.level--;
+                });
+            }
+        };
 
         $scope.increaseAttribute = function (id) {
             angular.forEach($scope.personageAttributes, function (personageAttribute) {
@@ -1501,6 +1822,7 @@
                 } else {
                     $scope.personage.experience = $scope.personage.experience - 1;
                 }
+                $scope.recalculateMagicSchools();
                 $scope.loader = false;
             });
         };
