--- a/public/views/view_personage.html
+++ b/public/views/view_personage.html
@@ -295,19 +295,181 @@
 
             <div class="panel panel-default">
                 <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#spells">
+                        <div class="panel-heading">
+                            Заклинания
+                        </div>
+                    </a>
+                </h4>
+                <div id="spells" class="panel-collapse collapse">
+                    <div class="panel-body">
+
+                        <div ng-repeat="school in schools | orderBy : 'name'">
+                            <div class="panel-group">
+
+                                <div class="panel panel-default">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" href="#spells{{school.id}}">
+                                            <div class="panel-heading">
+                                                {{school.name}}
+                                            </div>
+                                        </a>
+                                    </h4>
+                                    <div id="spells{{school.id}}" class="panel-collapse collapse">
+                                        <div class="panel-body">
+                                            <table class="table table-striped">
+                                                <tr ng-repeat="personageSpell in personageSpells | orderBy : 'personageSpell.Spell.name'">
+                                                    <td ng-if="personageSpell.Spell.AttachedSkillId == school.id" style="vertical-align:middle;">
+                                                        <a href="#" class="btn btn-link" role="button" ng-click="showSpellDetail(personageSpell)">
+                                                            {{ personageSpell.Spell.name }}
+                                                        </a>
+                                                    </td>
+                                                    <td ng-if="personageSpell.Spell.AttachedSkillId == school.id" style="vertical-align:middle;text-align:center;">
+                                                        {{personageSpell.level}} ур.
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="panel panel-default">
+                <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#inventory">
                         <div class="panel-heading">
-                            Инвентарь
+                            Заметки
                         </div>
                     </a>
                 </h4>
                 <div id="inventory" class="panel-collapse collapse">
                     <div class="panel-body">
-                        Инвентарь
+                        {{notes}}
                     </div>
                 </div>
             </div>
 
+        </div>
+    </div>
+
+    <div id="spellDetails" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Описание заклинания: <strong>{{currentPersonageSpell.Spell.name}}</strong></h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Ваш уровень:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            {{currentPersonageSpell.level}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Учитель:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            <input type="checkbox" class="form-control" id="spellTutored"
+                                   ng-model="currentPersonageSpell.tutored" style="margin-top: -6px; margin-left: -6px;" disabled>
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Кодовое название:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            {{currentPersonageSpell.Spell.name}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Сложность:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            {{currentPersonageSpell.Spell.complexity}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Сложность создания:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            {{currentPersonageSpell.Spell.creating_complexity}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Мана:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            {{currentPersonageSpell.Spell.mana}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Поддержание:</strong>
+                        </div>
+                        <div ng-show="spellDetails.spell.instant">
+                            <div class="col-md-4 col-xs-4">
+                                Мгновенное
+                            </div>
+                        </div>
+                        <div ng-hide="spellDetails.spell.instant">
+                            <div class="col-md-4 col-xs-4">
+                                {{currentPersonageSpell.Spell.mana_support}} {{spellDetails.spell.mana_sup_time}}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Стоимость:</strong>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            {{currentPersonageSpell.Spell.cost}}
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Эффект:</strong>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 col-xs-12">
+                            {{currentPersonageSpell.Spell.effect}}
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-md-4 col-xs-4">
+                            <strong>Описание:</strong>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 col-xs-12">
+                            {{currentPersonageSpell.Spell.description}}
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Понятно!</button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -399,6 +561,9 @@
             $scope.personageFlaws = data.personage.PersonageFlaws;
             $scope.personageAttachedSkills = data.personage.PersonageAttachedSkills;
             $scope.personageTriggerSkills = data.personage.PersonageTriggerSkills;
+            $scope.personageSpells = data.personage.PersonageSpells;
+            $scope.notes = data.personage.notes;
+            $scope.calculateMagicSchools();
             personage.resolve();
         });
 
@@ -407,6 +572,28 @@
             $scope.personageMerits = data.personageMerits;
             personageMerits.resolve();
         });
+
+        $scope.calculateMagicSchools = function () {
+            $scope.schools = [];
+            var buffer = [];
+            angular.forEach($scope.personageSpells, function (personageSpell) {
+                if (buffer.indexOf(personageSpell.Spell.AttachedSkillId) == -1) {
+                    buffer.push(personageSpell.Spell.AttachedSkillId);
+                }
+            });
+
+            angular.forEach(buffer, function (attachedSkillId) {
+                $http.get('/attachedSkills/' + attachedSkillId).
+                success(function (data) {
+                    $scope.schools.push(data.attachedSkill);
+                });
+            });
+        };
+
+        $scope.showSpellDetail = function (personageSpell) {
+            $scope.currentPersonageSpell = personageSpell;
+            jQuery('#spellDetails').modal('show');
+        };
 
     });
 
